test/cli/test/images/secure-images/kyverno-test.yaml
name: test-image-enforce-signatures
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: secure-images
  resources:
  - tomcat
  result: fail
  rule: enforce-signatures
