test/cli/test/images/secure-images/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: secure-images
spec:
  admission: true
  background: false
  failurePolicy: Fail
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: enforce-signatures
    validate: {}
    verifyImages:
    - imageReferences:
      - '*'
      mutateDigest: false
      required: true
      useCache: true
      verifyDigest: false
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
