test/cli/test/images/secure-images/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
spec:
  containers:
    - name: tomcat
      image: ghcr.io/jimbugwadia/demo-java-tomcat:v0.0.15
